# repository-harness

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
crates/harness/: Cargo.toml
crates/harness-bench/: Cargo.toml
crates/harness-bench/src/: artifact.rs  error.rs  lib.rs  main.rs  responsibility.rs  score.rs  task.rs
crates/harness-bench/tests/: score_cli.rs
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: application.rs  domain.rs  epoch_fence.rs  infrastructure.rs  interface.rs  main.rs
crates/harness-symphony/: Cargo.toml
crates/harness-symphony/src/: agent.rs  auto.rs  changeset.rs  cleanup.rs  config.rs  doctor.rs  external.rs  harness_digest.rs  interface.rs  main.rs  pr.rs  retention.rs  run.rs  run_events.rs  state.rs  sync.rs  upload.rs  web.rs  work.rs
crates/harness-symphony/web-ui/: DESIGN.md  PRODUCT.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
crates/harness-symphony/web-ui/electron/: backend.cjs  browser-dev.cjs  dev.cjs  main.cjs  smoke.cjs
crates/harness-symphony/web-ui/src/: main.tsx  run-log.ts  styles.css
crates/harness-symphony/web-ui/src/components/ui/: badge.tsx  button.tsx  input.tsx
crates/harness-symphony/web-ui/src/features/symphony/: active-task-flow.tsx  api.ts  board.tsx  constants.ts  context-viewer.tsx  detail.tsx  intake.tsx  markdown.tsx  run-console-model.test.ts  run-console-model.ts  run-console.tsx  run-info-model.test.ts  run-info-model.ts  settings.tsx  sidebar.tsx  task-flow-model.test.ts  task-flow-model.ts  toast.tsx  tool-dashboard.tsx  trace-explorer.tsx  types.ts
crates/harness-symphony/web-ui/tests/: board.spec.ts
crates/harness/assets/docs/decisions/: README.md
crates/harness/assets/docs/plans/: README.md
crates/harness/assets/docs/plans/completed/: README.md
crates/harness/src/: lib.rs  main.rs
crates/harness/src/application/: mod.rs  ports.rs  service.rs
crates/harness/src/domain/: model.rs
crates/harness/src/infrastructure/: embedded_distribution.rs  filesystem_state.rs  git_merge.rs  mod.rs
crates/harness/src/interface/: cli.rs  mod.rs  presenter.rs
crates/harness/tests/: clean_architecture.rs  cli_lifecycle.rs  update_lifecycle.rs
docs/: ARCHITECTURE.md  CONTEXT_RULES.md  HARNESS.md  HARNESS_AUDIT.md  HARNESS_COMPONENTS.md  HARNESS_MATURITY.md  README.md  (+7 more)
(+187 files in other folders)
