[package]
name = "harness-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "harness-bench"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3"
