[package]
name = "harness-cli"
version = "0.1.12"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde_json = "1.0.145"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
