[package]
name = "harness-symphony"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "harness-symphony"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
tempfile = "3.27.0"
thiserror = "2.0.18"
webbrowser = "1.2.1"
